fixed alignment

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'product_sansregular', Arial, sans-serif;
+    min-height: 200vh;
+}
 .navbar {
     padding-top: 0.8rem;
     padding-bottom: 1rem;
@@ -49,6 +53,8 @@
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.07);
     border-radius: 0rem;
+    border-radius: none !important;
+    width: 30rem;
 }
 .btn-gl {
     display: inline-block;
@@ -74,9 +80,7 @@
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     font-size: 20;
 } 
-body {
-    font-family: 'product_sansregular', Arial, sans-serif;
-}
+
 .navbar-gl {
     position: relative;
     display: flex;
@@ -86,6 +90,37 @@ body {
     padding-top: 2rem;
     padding-bottom: 1rem */;
 }
+.mod {
+    position:absolute;
+    margin-left: 250px;
+    margin-top: 55px;
+}
+.illust-bg {
+    width: 1521px;
+    margin-left: -3px;
+    margin-top: -17px;
+}
+.bg-img{
+    background-image: url('../../public/assets/univsell-illust-bg.png');
+    background-repeat: no-repeat;
+    width: 1521px;
+    margin-left: -3px;
+    margin-top: -17px;background-size:100% auto;
+height: 1000px;
+
+}
+.fas {
+    font-size:60px;
+}
+.log-title {
+    font-size: 15px;
+    margin-left: 74px;
+    margin-top: 10px;
+    font-family: 'product_sansregular', Arial, sans-serif;
+}
+.alert-req {
+    font-size: 1.1rem;
+}
 @media only screen and (max-width: 600px) {
     .navbar-brand {
         padding-left: 15px;
@@ -93,7 +128,40 @@ body {
     .navbar-nav {
         padding-left: 15px;
     }
-    .illust-bg {
-        visibility: hidden;
+    .bg-img {
+        background-image: none !important;
+        width: 0px;
+        height: 0px;
+        /* position: relative;
+        width: 495px;
+        margin-left: -114px;
+        margin-top: 0px; */
+    }
+    .mod {
+        margin-left: 20px;
+        margin-top: 0px;
+    }
+    .navbar-gl {
+        padding-top: 0rem;
+    }
+    .fas {
+        font-size:30px;
+    }
+    .al {
+        padding: 5rem 2.5rem;
+    }
+    .log-title {
+        font-size: 12px;
+        margin-left: 11px;
+        margin-top: -50px;
+    }
+    .fa-hotel {
+        margin-left: -20px;
+    }
+    .card-gl {
+        width: 20rem;
+    }
+    .alert-req {
+        font-size: 0.9rem;
     }
 }
